--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.14",
+    "expo": "^50.0.15",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
