--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-storage": "^1.0.1",
@@ -41,9 +45,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
+    "sharp-cli": "^4.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
