--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-notifications": "~0.27.7",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
+    "expo-router": "^3.4.9",
+    "expo-splash-screen": "^0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.6.0",
+    "lodash.filter": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
